adds idea for .text-palistory-flag-(red|white|black) keys for use in styling site

--- a/styles/css/custom.css
+++ b/styles/css/custom.css
@@ -4,6 +4,9 @@
  * component stylesheets.
  ============================================================================ */
 
+// .text-palistory-flag-red
+// .text-palistory-flag-white
+// .text-palistory-flag-black
 
 .pr-navbar,
 footer#footer,
