remove constraint on width for interview card

--- a/templates/views/views-view-unformatted--interview_card.html.twig
+++ b/templates/views/views-view-unformatted--interview_card.html.twig
@@ -27,7 +27,7 @@
   <div{{ row.attributes.addClass(row_classes) }}>
     {{ row.content }}
   </div>
-  <div class="card" style="width: 18rem;">
+  <div class="card">
     <img src="{{ row.field_card_img}}" class="card-img-top" alt="{{ row.content}}">
     <div class="card-body">
       <h5 class="card-title">{{row.field_card_title}}</h5>
