creeping towards a styled card for the interview subjects

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -1,13 +1,20 @@
 // * { color: red }
 
 h2.node__title a.node__title-link span.field-name-title,
-div.card-group h1.node_title span {
+h3.card-title a.node__title-link span.field-name-title,
+div.card-group h1.node__title span.field-name-title {
   font-family: "gf_Young_Serif variant0", Tofu;
+	font-weight: 600;
 }
 
 .pr-navbar, 
 div#navbar,
 div#rid-footer {
   background-color: #2e2e2e;
+}
+
+div.card-group div.field-name--field-card-title h3.field__label,
+div.field-node--field-card-img h3.field__label {
+  display: none;
 }
 
