--- a/templates/views/views-view-unformatted--interview_card.html.twig
+++ b/templates/views/views-view-unformatted--interview_card.html.twig
@@ -27,10 +27,12 @@
   <div{{ row.attributes.addClass(row_classes) }}>
     {{ row.content }}
   </div>
+  <div class="card-group">
   <div class="card">
-    <img src="{{ row.field_card_img}}" class="card-img-top" alt="{{ row.content}}">
+    <div class="card-image">
+      <img src="{{ row.field_card_img}}" class="card-img-top" alt="{{ row.content}}">
+    </div>
     <div class="card-body">
-      <h5 class="card-title">{{row.field_card_title}}</h5>
       <p class="card-text">{{row.body}}</p>
     </div>
   </div>
