--- a/templates/views/views-view-unformatted--interview_card.html.twig
+++ b/templates/views/views-view-unformatted--interview_card.html.twig
@@ -28,7 +28,7 @@
     {{ row.content }}
   </div>
   <div class="card-group">
-  <div class="card">
+  <div class="card border-3">
     <div class="card-image">
       <img src="{{ row.field_card_img}}" class="card-img-top" alt="{{ row.content}}">
     </div>
