adds div.card-video for row.card-video

--- a/templates/views/views-view-unformatted--interview_card.html.twig
+++ b/templates/views/views-view-unformatted--interview_card.html.twig
@@ -32,6 +32,9 @@
     <div class="card-image">
       <img src="{{ row.field_card_img}}" class="card-img-top" alt="{{ row.content}}">
     </div>
+    <div class="card-video">
+      {{row.card-video}}
+    </div>
     <div class="card-body">
       <p class="card-text">{{row.body}}</p>
     </div>
