--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -16,9 +16,47 @@
   background-color: #2e2e2e;
 }
 
+div#content-prefix div.l-rw  {
+  background-image: url("/system/files/styles/wide/private/2025-03/hungry_gazan_children-01.jpg");
+}
+
+#iframe-field_embed_video-9,
+#iframe-field_embed_video-10,
+#iframe-field_embed_video-11,
+#iframe-field_embed_video-12,
+#iframe-field_embed_video-13,
+#iframe-field_embed_video-14 {
+  height: 200px;
+}
+
+#iframe-field_embed_video-9 -> body.vp-center,
+#iframe-field_embed_video-10 -> body.vp-center,
+#iframe-field_embed_video-11 -> body.vp-center,
+#iframe-field_embed_video-12 -> body.vp-center,
+#iframe-field_embed_video-13 -> body.vp-center,
+#iframe-field_embed_video-14 -> body.vp-center {
+  align-items: baseline;
+}
+
+div.views-field-field-embed-video div.views-field-body {
+  
+}
+
+div.views-field-field-embed-video h3.iframe_title {
+  display: none;
+}
+
+div.palistory-tellers div.views-col.col-1,
+div.palistory-tellers div.views-col.col-2,
+div.palistory-tellers div.views-col.col-3 {
+  background-color: #e6e6e6;
+  margin: 12px;
+}
+
 h1.page__title,
 h1.node__title,
 span.field-name-title,
+span.story-teller-name,
 article.node h1.node__title,
 div.palistory_tellers p,
 div.palistory-tellers div.view-header h3,
@@ -29,6 +67,7 @@ article.node--type-story-teller-video h1.node__title,
 h2#block-palistoryisdedicated-title,
 h2.node__title a.node__title-link span.field-name-title,
 h3.card-title a.node__title-link span.field-name-title,
+div.views-field-field-embed-video div.views-field-body a,
 div.card-group h1.node__title span.field-name-title {
   font-family: "gf_Young_Serif variant0", Tofu;
   font-weight: 600;
