Ibrahim wants background on story teller cards to be darker

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -88,7 +88,7 @@ div.palistory-tellers div.views-col.col-1,
 div.palistory-tellers div.views-col.col-2,
 div.palistory-tellers div.views-col.col-3 {
   border-radius: 25px;
-  background-color: #e6e6e6;
+  background-color: #b8b8b8;
   margin: 12px;
 }
 
