--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -226,3 +226,6 @@ div#rid-content-suffix -> div#block-purchaseakuffieyh -> div#purchase_kuffiyeh {
     color: white;
 }
 
+.site-branding__logo-img{
+  width:100px !important;
+}
