--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -229,3 +229,7 @@ div#rid-content-suffix -> div#block-purchaseakuffieyh -> div#purchase_kuffiyeh {
 .site-branding__logo-link img{
   width:100px !important;
 }
+nav#block-at-palistry-main-menu {
+    display: block;
+    float: right;
+}
