--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -229,3 +229,7 @@ nav#block-at-palistry-main-menu {
     display:block !important;
     float:right !important;
 }
+nav#block-at-palistry-main-menu {
+    background-color: orange !important;
+    border: 5px solid black !important;
+}
