--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -229,3 +229,8 @@ nav#block-at-palistry-main-menu {
     display:block !important;
     float:right !important;
 }
+body nav#block-at-palistry-main-menu {
+    float: right !important;
+    background: lime !important; /* test visibility */
+}
+
