--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -7,6 +7,10 @@
   clear: both;
   display: table;
 }
+nav#block-at-palistry-main-menu {
+    display: block !important;
+    float: right !important;
+}
 
 div.palistory_board_member a {
   color: #2e2e2e;
