--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -7,7 +7,7 @@
   clear: both;
   display: table;
 }
-nav.rm-config-provider--system {
+nav.rm-block {
     display: block !important;
     float: right !important;
 }
