attempt unsuccessfully to apply button image to contribute link in main menu

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -296,3 +296,6 @@ header#masthead .l-rw.regions.container.pr-header__rw {
   padding: 0 30px;
 }
 
+li#menu-name--main__contribute {
+  background-image: url("/sites/default/files/public_images/2025-03/donate_now_button.png");
+}
