add another selector on another rule, still seeking margins in story cards for story tellers

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -65,6 +65,7 @@ div#palistory_merchandise_copy p {
   color: #ffffff;
 }
 
+div.views-field-body,
 div.views-field-field-embed-video {
   margin-top: 1em;
   margin-left: 1em;
