--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -67,9 +67,14 @@ div#palistory_merchandise_copy p {
 
 div.views-field-body,
 div.views-field-field-embed-video {
-  margin-top: 1em;
-  margin-left: 1em;
-  margin-right: 1em;
+  margin-top: .5em;
+  margin-left: .5em;
+  margin-right: .5em;
+}
+
+div.views-field-body {
+  margin-bottom: 2em;
+
 }
 
 div.palistory-tellers div.views-field-field-embed-video div.field-content, 
