--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -73,6 +73,7 @@ div.views-field-field-embed-video {
 }
 
 div.views-field-body {
+  background-color: yellow;
   margin-top: .2em;
   margin-bottom: 2em;
   margin-left: .5em;
