further changes on story teller cards

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -75,9 +75,9 @@ div.views-field-field-embed-video {
 div.views-field-body {
   background-color: yellow;
   margin-top: .2em;
-  margin-bottom: 2em;
-  margin-left: .5em;
-  margin-right: .5em;
+  margin-bottom: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
 
 }
 
