--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -78,8 +78,8 @@ div.views-field-body {
   margin-right: 1em;
 }
 
-div.palistory-tellers div.views-field-field-embed-video div.field-content, 
-div.palistory-tellers div.views-field-field-embed-video div.field-content p, 
+// div.palistory-tellers div.views-field-field-embed-video div.field-content, 
+// div.palistory-tellers div.views-field-field-embed-video div.field-content p, 
 div.palistory-tellers div.views-field-field-embed-video div.field-content span.story-teller-name { 
   margin: 2em 2em 2em 2em;
 }
