--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -61,6 +61,18 @@ body.path-frontpage article.node--type-about-palistory.node--promoted span.field
   // background-color: rgba(255, 0, 0, 0.4);
 }
 
+.view-id-0_palistory_about .node__container {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  url("/sites/default/files/public_images/2025-03/hungry_gazan_children-01.jpg");
+}
+
+article.node--id-1 {
+  color: white;
+  background-color: transparent;
+}
+
 div#palistory_merchandise_copy p {
   color: #ffffff;
 }
