--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -61,7 +61,7 @@ body.path-frontpage article.node--type-about-palistory.node--promoted span.field
   // background-color: rgba(255, 0, 0, 0.4);
 }
 
-.view-id-0_palistory_about .node__container {
+.view-id-0_palistory_about .node--sticky .node__container {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
