--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -51,9 +51,9 @@ body.path-frontpage div#content-prefix div.l-rw  {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  // url("/sites/default/files/public_images/2025-03/hungry_gazan_children-01.jpg");
 }
 
+article.node--id-3,
 body.path-frontpage article.node--type-about-palistory.node--promoted,
 body.path-frontpage article.node--type-about-palistory.node--promoted span.field-name-title {
   color: white;
