--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -77,6 +77,14 @@ article.node--id-1 span.field-name-title {
 
 @media screen and (min-width: 800px) {
 
+  article.node--id-1 h2.node__title {
+    float: left;
+    width: 48%;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: .5em;
+  }
+ 
   article.node--id-1 div.palistory_mission,
   body.path-frontpage article.node--type-about-palistory.node--promoted {
     float: left;
