--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -241,6 +241,10 @@ div.field-formatter-glightbox-media-remote-video a.glightbox {
   width: 85%;
 }
 
+div#block-contributetoourworkcard-2 p {
+  margin: 0 0 1.00rem;
+}
+
 div#block-contributetoourworkcard-2 div.block__inner {
   padding: 2em;
 }
