--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -128,6 +128,21 @@ article.node--id-1 span.field-name-title {
 
 }
 
+article.node--id-1 div.palistory_mission p,
+article.node--id-1 div.palistory_mission h2,
+article.node--id-1 div.palistory_mission h1 {
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+article.node--id-1 div.palistory_mission h1 {
+  padding-top: 1em;
+}
+
+article.node--id-1 div.palistory_mission p {
+  padding-bottom: 2em;
+}
+
 div#palistory_merchandise_copy p {
   color: #ffffff;
 }
