div#block-donatenowbutton { display:none; }

--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -196,6 +196,7 @@ div.views-field-field-embed-video div.views-field-body {
   
 }
 
+div#block-donatenowbutton,
 h2#block-palistoryboard-title,
 article.node--id-1 h2.node__title,
 div#block-at-palistry-page-title,
