--- a/styles/css/palistry_custom.css
+++ b/styles/css/palistry_custom.css
@@ -491,7 +491,7 @@ li#menu-name--main__contribute {
 	#block-palistorylogoforfooter{
 		float: none;
 		width: auto;
-		text-align: center;
+		text-align: center !important;
 	}
 }
 
